<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frontend_connector</name>
  <version>0.0.1</version>
  <description>Link ROS and web fronetnd</description>
  <maintainer email="thirawat.tam@gmail.com">Tam</maintainer>
  <license>MIT</license>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python-paho-mqtt-pip</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
